# BitTorrent

./: CMakeLists.txt
buid/: CMakeCache.txt  Makefile  cmake_install.cmake
buid/cli/: BT_cli  Makefile  cmake_install.cmake
buid/daemon/: BT_daemon  Makefile  cmake_install.cmake
buid/gui/: BT_gui  Makefile  cmake_install.cmake
buid/gui/BT_gui_autogen/: mocs_compilation.cpp
buid/gui/BT_gui_autogen/6YEA5652QU/: moc_TorrentWidget.cpp
cli/: CMakeLists.txt
cli/include/: cli.hpp  command.hpp  icommand.hpp
cli/include/command/: add.hpp  del.hpp  help.hpp  icommand.hpp  info.hpp  pause.hpp  resume.hpp
cli/src/: cli.cpp  command.cpp  main.cpp
cli/src/command/: add.cpp  del.cpp  help.cpp  info.cpp  pause.cpp  resume.cpp
daemon/: CMakeLists.txt
daemon/include/: daemon.hpp  daemonserver.hpp  dserver.hpp
daemon/src/: daemon.cpp  daemonserver.cpp  dserver.cpp  main.cpp
daemon/src/command/: add.cpp  del.cpp  info.cpp  pause.cpp  resume.cpp
gui/: CMakeLists.txt
gui/include/: BottomWidget.hpp  MainWindow.hpp  StatesWidget.hpp  TopToolBar.hpp  TopWidget.hpp  TorrentThread.hpp  TorrentWidget.hpp  bt_window.hpp  test.hpp
gui/src/: BottomWidget.cpp  MainWindow.cpp  StatesWidget.cpp  TopToolBar.cpp  TopWidget.cpp  TorentWidget.cpp  TorrentThread.cpp  TorrentWidget.cpp  bt_window.cpp  bt_window.cpp~  main.cpp  test.cpp  test.cpp~
include/: bt_window.hpp
lib/: httplib.h  torrent.hpp
src/: bt_window.cpp  main.cpp  simplemenu.cpp  simplemenu.h
test/: test.cpp
